--- a/CE-110_Lab_Revision_Notes_2.ipynb
+++ b/CE-110_Lab_Revision_Notes_2.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "## Extract 2010 data and 2015 data\n",
     "\n",
-    "We will import data from 2010 and 2015 utility network data. Each table will have a year column, which shows the current year and the future years used for prediction. \n",
+    "We will import the data that has 2010 and 2015 utility network data.\n",
     "\n",
     "`year`: the year that the values were measured.\n",
     "- 2010: actual data collected for year 2010\n",
@@ -1324,37 +1324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the two bar graphs plotted above, we can see that in 2015, the actual energy used was significantly higher than the predicted 2015 total energy. The total amount of volume in actual 2015 was also higher than predicted 2015 value, but it was not as significant as the total amount of energy. From these two graphs, we can analyze that because of the drought, in year 2015, Cerritos utility needed more amount of water than "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Question :\n",
-    "What can you tell from the bar graph? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TYPE YOUR ANSWER"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Question :\n",
-    "What can you tell from the visualization above? What is siginificant about the data shown above?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TYPE YOUR ANSWER"
+    "In the two bar graphs plotted above, we can see that in 2015, the actual energy used was significantly higher than the predicted 2015 total energy. The total amount of volume in actual 2015 was also higher than predicted 2015 value, but it was not as significant as the total amount of energy. From these two graphs, we can analyze that because of the drought, in year 2015, Cerritos utility needed more amount of water than they expected in 2015. Consequently, they transported amount of water from the sources and this unexpected transportation energy caused high increase in transportation energy during the irrigation process."
    ]
   },
   {
@@ -1835,9 +1805,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have created a new table called test which contains both 2010 and 2015 data for all the utilities in the United States. From this data we will find a ratio between the total amount of energy consumed and the total amount of water trasnported to see the relationship between energy and water among actual 2010, actual 2015, and predicted 2015 data.\n",
-    "\n",
-    "<div style = \"color:green\">Explain **WHY** we're interested in this Ratio in the context of the analysis you provided above (drought!).</div>"
+    "We have created a new table called test which contains both 2010 and 2015 data for all the utilities in the United States. From this data we will find a ratio between the total amount of energy consumed and the total amount of water trasnported to see the relationship between energy and water among actual 2010, actual 2015, and predicted 2015 data."
    ]
   },
   {
@@ -1949,7 +1917,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the ratio found by dividing total amount of energy used by the total volume of water, we can wee that the ratio was significantly higher for 2015. In 2010, California consumed 1.10632 Billion kwh (kilowatt per hour) of energy to transport 6.64069 Million (units) of water. The amount of water transported in 2015 was predicted at that time to increase, so the total energy consumed was also predicted to increase by a small amount. However, the data shows that in 2015, the amount of water transported actually reduced to 4.3739 Million (units) of water, but the total energy expended increased significantly to 2.70958 Billion kwh, which is much higher than the predicted increase in energy (which also predicted that water transports would increase).\n",
+    "From the ratio found by dividing total amount of energy used by the total volume of water, we can see that the ratio was significantly higher for 2015. In 2010, California consumed 1.10632 Billion kwh (kilowatt per hour) of energy to transport 6.64069 Million (units) of water. The amount of water transported in 2015 was predicted at that time to increase, so the total energy consumed was also predicted to increase by a small amount. However, the data shows that in 2015, the amount of water transported actually reduced to 4.3739 Million (units) of water, but the total energy expended increased significantly to 2.70958 Billion kwh, which is much higher than the predicted increase in energy (which also predicted that water transports would increase).\n",
     "\n",
     "#### How did this happen? What do you think caused this change? \n",
     "\n"
