--- a/CE-110_Lab_Revision_Notes_2.ipynb
+++ b/CE-110_Lab_Revision_Notes_2.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from datascience import *\n",
@@ -56,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +116,7 @@
        "... (1433 rows omitted)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +206,7 @@
        "... (508 rows omitted)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +258,7 @@
        "2010 | 1807057PD  | 1807057E | 6048                 | 163.1"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +349,7 @@
        "... (360 rows omitted)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +405,7 @@
        "2015 | 1807057PD  | 1807057E | 8460                 | 326.2"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,9 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -430,7 +426,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do you see anything different between 2010 and 2015 data for Cerritos utility? Notice that the cumulative_volume_af from 1807075PD source increased significantly, as well as the transmission_kwh/af value. "
+    "Do you see anything different between 2010 and 2015 data for Cerritos utility? Notice that the cumulative_volume_af from 1807075PD source increased significantly, as well as the transmission_kwh/af value. \n",
+    "\n",
+    "<div style = \"color:green\"> Go deeper here: introduce the analysis, explain that the differences in magnitudes of these values are what will be at the core of this analysis notebook. Tell students to keep an eye on not just whether values increase or decrease, but also on **how much** it increases/decreases </div>"
    ]
   },
   {
@@ -526,7 +524,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question: Do you see any similar pattern in increase of volume of water or trasmission_kwh/af for your utility? "
+    "#### Question: Do you see any similar pattern in increase of volume of water or trasmission_kwh/af for your utility? \n",
+    "\n",
+    "<div style = \"color:green\"> Have students notice the magnitude in differences and have them comment on it </div>"
    ]
   },
   {
@@ -544,12 +544,25 @@
    "source": [
     "## Add a column that calculates total energy used in each utility.\n",
     "\n",
-    "For each data set, we have a column that tells us the cumulative volume of water transferred and energy required to pump water per acre foot through the irrigation system. By multiplying the two columns, we can get the total amount of energy used in pumping water from each source to a target. For example, if you look at the cerritos data from 2010, we pumped 6048 units of water with 163.1 kwh/af energy used to transfer. We will now multiply these two numbers to get the total energy used from this utility: 986429.8 kwh."
+    "For each data set, we have a column that tells us the cumulative volume of water transferred and energy required to pump water per acre foot through the irrigation system. By multiplying the two columns, we can get the total amount of energy used in pumping water from each source to a target. For example, if you look at the cerritos data from 2010, we pumped 6048 units of water with 163.1 kwh/af energy used to transfer. We will now multiply these two numbers to get the total energy used from this utility: 986429.8 kwh.\n",
+    "\n",
+    "- <div style = \"color:green\"> Remind studends what `with_column()` does.</div>\n",
+    "- Calculate the metric first in a seperate code block\n",
+    "- Remind studnts what `.column()` does and how multiplying two arrays together work (covered in intro notebook, brief explanation is fine, refer to intro notebook if students need to review this)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_energy_2010 = cerritos_2010.column('cumulative_volume_af') * cerritos_2010.column('transmission_kwh/af')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -577,19 +590,19 @@
        "2010 | 1807057PD  | 1807057E | 6048                 | 163.1               | 986429"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cerritos_2010 = cerritos_2010.with_column('total energy in kwh', cerritos_2010.column('cumulative_volume_af') * cerritos_2010.column('transmission_kwh/af'))\n",
+    "cerritos_2010 = cerritos_2010.with_column('total energy in kwh', total_energy_2010)\n",
     "cerritos_2010"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +630,7 @@
        "2015 | 1807057PD  | 1807057E | 8460                 | 326.2               | 2.75965e+06"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,16 +657,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now add the total energy column for your own utility!"
+    "## Now add the total energy column for your own utility!\n",
+    "\n",
+    "<div style = \"color:green\"> use the `.with_column()` method to add this new metric onto your 2010 and 2015 tables... </div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'utility_2010' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-22-a1a0005658cc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#actual 2010 data with total energy column\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mutility_2010\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mutility_2010\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwith_column\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m...\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mutility_2010\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'utility_2010' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#actual 2010 data with total energy column\n",
     "utility_2010 = utility_2010.with_column(...)\n",
@@ -699,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +752,7 @@
        "2010 | 1807057PD  | 1807057E | 6048                 | 163.1               | 986429"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +798,7 @@
        "2015 | 1807057PD  | 1807057E | 8460                 | 326.2               | 2.75965e+06"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -826,12 +851,14 @@
        "Predicted 2015 | 1807057PD  | 1807057E | 7410                 | 163.1               | 1.20857e+06"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Simply run this cell\n",
+    "\n",
     "data_2010_pred = data.where('year', are.equal_to('Predicted 2015'))\n",
     "cerritos_2015p = data_2010_pred.where(\"target\",are.equal_to(\"1807057E\"))\n",
     "cerritos_2015p\n",
@@ -1978,7 +2005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
