--- a/CE-110_Lab_Revision_Notes_2.ipynb
+++ b/CE-110_Lab_Revision_Notes_2.ipynb
@@ -143,7 +143,15 @@
    "source": [
     "## Actual 2010 Data\n",
     "\n",
-    "Let's get the actual observed data in 2010. By setting the column of the data table as 2010, we will be looking at the actual 2010 data."
+    "Let's get the actual observed data in 2010. By setting the column of the data table as 2010, we will be looking at the actual 2010 data. \n",
+    "\n",
+    "Before we get started, let's remind ourselves how to use `.where()`\n",
+    "\n",
+    "The **`where`** function allows us to choose certain rows based on two arguments:\n",
+    "- A column label\n",
+    "- A condition that each row should match, called the _predicate_ \n",
+    "\n",
+    "In other words, we call the `where` function like so: `table_name.where(column_name, predicate)`."
    ]
   },
   {
@@ -507,18 +515,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Before we dive into calculation, let's look at <b>two</b> important methods we will be using.\n",
+    "\n",
+    "The **`.column()`** function returns the values of a column as an array.:\n",
+    "- index or label\n",
+    "\n",
+    "We call the `column()` function like so: `table_name.column(index_or_label)`.\n",
+    "\n",
+    "In order to select two columns from a table, you can do `table_name.column(column1)` x `table_name.column(column2)` \n",
+    "\n",
+    "The **`.with_column()`** function returns a new table with an additional or replaced column.:\n",
+    "- A column label\n",
+    "- values\n",
+    "\n",
+    "We call the `.with_column()` function like so: `table_name..with_column(label, values)`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Add a column that calculates total energy used in each utility.\n",
     "\n",
     "For each data set, we have a column that tells us the cumulative volume of water transferred and energy required to pump water per acre foot through the irrigation system. By multiplying the two columns, we can get the total amount of energy used in pumping water from each source to a target. For example, if you look at the cerritos data from 2010, we pumped 6048 units of water with 163.1 kwh/af energy used to transfer. We will now multiply these two numbers to get the total energy used from this utility: 986429.8 kwh.\n",
     "\n",
+    "\n",
     "### How to calculate the amount of energy used.\n",
-    "- transmission_kwh = cumulative_volume_af * transmission_kwh/af\n",
     "\n",
-    "\n",
-    "\n",
-    "- <div style = \"color:green\"> Remind studends what `with_column()` does.</div>\n",
-    "- Calculate the metric first in a seperate code block\n",
-    "- Remind studnts what `.column()` does and how multiplying two arrays together work (covered in intro notebook, brief explanation is fine, refer to intro notebook if students need to review this)."
+    "- transmission_kwh = cumulative_volume_af * transmission_kwh/af"
    ]
   },
   {
@@ -1134,7 +1158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Percent Increase of Energy\n",
+    "## Percent Increase of Volume\n",
     "\n",
     "Let's look at how much total volume increased between year 2010 and 2015!"
    ]
@@ -1535,14 +1559,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Question:\n",
-    "What do you notice anything significant in the percent increase?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1554,13 +1570,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Percent Increase of Volume\n",
+    "\n",
+    "Let's look at how much total volume increased between year 2010 and 2015!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1644,7 +1660,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PART V. Big Data: All the Utilities in the United States"
+    "# Big Data: All the Utilities in the United States"
    ]
   },
   {
